# rust-mysql-docker-CRUD

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  main.rs
docker-compose/mongo/: mongo-init.js
docker-compose/mysql/: init_db.sql
